Bug 441053 - [downstream fault] - Win11 applet and Super key "stuck" dodge active/autohide modes
Summary: [downstream fault] - Win11 applet and Super key "stuck" dodge active/autohide...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.10.0
Platform: Kubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
: 441407 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-08-16 16:46 UTC by aliquo93
Modified: 2021-10-14 22:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Layout (16.30 KB, text/plain)
2021-08-17 00:46 UTC, aliquo93
Details
Video that shows the bug (2.91 MB, video/x-matroska)
2021-08-23 20:17 UTC, aliquo93
Details

Note You need to log in before you can comment on or make changes to this bug.
Description aliquo93 2021-08-16 16:46:42 UTC
SUMMARY

When I press the "Super" key to trigger the app menu, the auto-hide function in maximized windows stops working.

STEPS TO REPRODUCE
1. Trigger the app menu by pressing the "Super" key

OBSERVED RESULT
If I click the app menu directly from the dock with the mouse, there are no problems, but if I press the "Super" button on the keyboard, the dock stops to auto-hide on maximized applications and I'm forced to close and reopen Latte dock to make it work again.

EXPECTED RESULT
Auto-hide function should continue working.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Linux 5.11.0-25-generic (64 bit)
KDE Plasma Version: 5.22.4
KDE Frameworks Version: 5.85.0
Qt Version: 5.15.2
Comment 1 Michail Vourlakos 2021-08-16 18:14:40 UTC
1. Please send your layout file in order to try to reproduce
2. What are the exact steps to reproduce and observe the faulty behavior
Comment 2 aliquo93 2021-08-17 00:46:33 UTC
Created attachment 140785 [details]
Layout

I've already written the steps to reproduce, anyway I've now attached the Layout.
Comment 3 Michail Vourlakos 2021-08-17 05:48:31 UTC
(In reply to aliquo93 from comment #2)
> Created attachment 140785 [details]
> Layout
> 
> I've already written the steps to reproduce, anyway I've now attached the
> Layout.

no you havent. I use now your layout in my system so I am doing the following:

1. Make a window maximized
2. Press "Super key" and latte dock is now showing, it show the ditto menu I think
3. as long the application launcher in the center of the screen is shown the bottom latte is still showing
4. hiding the application launcher hides also the bottom latte when [1] window is activated

so what is the issue? or what the exact steps to reproduce?
Comment 4 aliquo93 2021-08-23 20:17:47 UTC
Created attachment 140989 [details]
Video that shows the bug

I've attached you a video that shows the issue. Could it be related to the launcher I'm using (Menu 11: https://store.kde.org/p/1544959/)?
Comment 5 aliquo93 2021-08-23 20:28:20 UTC
Info provided with a video.
Comment 6 Michail Vourlakos 2021-08-24 12:35:38 UTC
*** Bug 441407 has been marked as a duplicate of this bug. ***
Comment 7 Michail Vourlakos 2021-08-27 10:54:42 UTC
This is totally applet fault. The applet wants to position itself in the center of a panel or dock and this is actually something that is not intended through qml only code. In order to succeeded in this it does not set a visualParent in its code BUT the visualParent from plasma libraries is required because it also sets the transientParent() which is the only way to identify which window belongs to which dock or panel.

https://github.com/KDE/plasma-framework/blob/master/src/plasmaquick/dialog.cpp#L269
Comment 8 aliquo93 2021-08-28 22:25:20 UTC
Bug reported to applet author: https://github.com/prateekmedia/Menu11/issues/33
Comment 9 Michail Vourlakos 2021-10-14 22:15:48 UTC
Git commit a7cd06c2efafcaa2e3a6780bef1cf7cb081e9c6d by Michail Vourlakos.
Committed on 14/10/2021 at 22:08.
Pushed by mvourlakos into branch 'v0.10'.

dont block visibility function after Meta trigger

--Menu11 and SimpleMenu applets are using a custom
plasmoid approach in order to be able to position their
popups differently on the screen. This patch considers
this in a more generic way and does not use the default
codepath to show popups from these applets. More
importantly the Needs/RequiresAttention status is used
in order to determine the panel/dock visibility for
these applets.

M  +7    -7    app/view/containmentinterface.cpp
M  +3    -3    app/view/containmentinterface.h
M  +1    -1    app/view/view.cpp

https://invent.kde.org/plasma/latte-dock/commit/a7cd06c2efafcaa2e3a6780bef1cf7cb081e9c6d
Comment 10 Michail Vourlakos 2021-10-14 22:16:13 UTC
Git commit 59360176eea0330d0a97835509eb0cbb6c547657 by Michail Vourlakos.
Committed on 14/10/2021 at 22:16.
Pushed by mvourlakos into branch 'master'.

dont block visibility function after Meta trigger

--Menu11 and SimpleMenu applets are using a custom
plasmoid approach in order to be able to position their
popups differently on the screen. This patch considers
this in a more generic way and does not use the default
codepath to show popups from these applets. More
importantly the Needs/RequiresAttention status is used
in order to determine the panel/dock visibility for
these applets.

M  +7    -7    app/view/containmentinterface.cpp
M  +3    -3    app/view/containmentinterface.h
M  +1    -1    app/view/view.cpp

https://invent.kde.org/plasma/latte-dock/commit/59360176eea0330d0a97835509eb0cbb6c547657